# Noya

./: CMakeLists.txt  README.md  run.sh  see.sh
include/: CifarDataPreprocess.h  LoLaNeuralNetworks.h  MnistDataPreprocess.h  Mod.h  NeuralNetworks.h  NoyaNeuralNetworks.h  SRHE.h  SealBfvCrtWrapper.h  SealBfvVector.h
model/CIFAR/LoLa/: LoLa.cpp
model/CIFAR/Noya/: Noya.cpp.discard.likelola
model/CIFAR/Noya/1/: Noya.cpp
model/CIFAR/Noya/16/: Noya16.cpp
model/CIFAR/Noya/2/: Noya2.cpp
model/CIFAR/Noya/32/: Noya32.cpp
model/CIFAR/Noya/4/: Noya4.cpp
model/CIFAR/Noya/8/: Noya8.cpp
model/MNIST/Cryptonets/: Cryptonets.cpp
model/MNIST/LoLa/: LoLa.cpp
model/MNIST/Noya/1/: Noya.cpp
model/MNIST/Noya/16/: Noya16.cpp
model/MNIST/Noya/2/: Noya2.cpp
model/MNIST/Noya/32/: Noya32.cpp
model/MNIST/Noya/4/: Noya4.cpp
model/MNIST/Noya/8/: Noya8.cpp
resources/: CifarNoyaTest 7340.txt  CifarReLUNoya.txt  MnistReluNoya.txt
test/Cifar/: Noya.cpp
test/SRHE/: SRHE.cpp
